src/test/ui/associated-types/defaults-unsound-62211-1.stderr
error[E0277]: `Self` doesn't implement `std::fmt::Display`
  --> $DIR/defaults-unsound-62211-1.rs:20:5
   |
LL |     type Output: Copy + Deref<Target = str> + AddAssign<&'static str> + From<Self> + Display = Self;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-------^^^^^^^^
   |     |                                                                                |
   |     |                                                                                required by this bound in `UncheckedCopy::Output`
   |     `Self` cannot be formatted with the default formatter
   |
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + std::fmt::Display {
   |                            ^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Self: Deref` is not satisfied
  --> $DIR/defaults-unsound-62211-1.rs:20:5
   |
LL |     type Output: Copy + Deref<Target = str> + AddAssign<&'static str> + From<Self> + Display = Self;
   |     ^^^^^^^^^^^^^^^^^^^^-------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |                   |
   |     |                   required by this bound in `UncheckedCopy::Output`
   |     the trait `Deref` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + Deref {
   |                            ^^^^^^^

error[E0277]: cannot add-assign `&'static str` to `Self`
  --> $DIR/defaults-unsound-62211-1.rs:20:5
   |
LL |     type Output: Copy + Deref<Target = str> + AddAssign<&'static str> + From<Self> + Display = Self;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-----------------------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |                                         |
   |     |                                         required by this bound in `UncheckedCopy::Output`
   |     no implementation for `Self += &'static str`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + AddAssign<&'static str> {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Self: Copy` is not satisfied
  --> $DIR/defaults-unsound-62211-1.rs:20:5
   |
LL |     type Output: Copy + Deref<Target = str> + AddAssign<&'static str> + From<Self> + Display = Self;
   |     ^^^^^^^^^^^^^----^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |            |
   |     |            required by this bound in `UncheckedCopy::Output`
   |     the trait `Copy` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL | trait UncheckedCopy: Sized + Copy {
   |                            ^^^^^^

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
